apps/znc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: znc
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: znc
  ports:
    - name: irc
      port: 6501
      targetPort: 6501
      protocol: TCP
