apps/znc/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: znc
  namespace: media
spec:
  parentRefs:
    - name: atoca-gateway
      namespace: kube-system
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - znc.atoca.house
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: znc
          port: 6501
          weight: 1
